fix alignment

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -503,6 +503,7 @@ td {
   width: 100%;
   background-color: #e3e3e3;
   padding: 8px;
+
 }
 .progress-outer {
   display: inline;
@@ -736,6 +737,14 @@ td {
   .contain-categories .col-md-offset-12 {
     padding-left: 8px !important;
     padding-right: 8px !important;
+  }
+  .contain-progress {
+    margin-right: 8px;
+    margin-left: 8px;
+  }
+  .add-item {
+    margin-right: 0px !important;
+    margin-left: 0px !important;
   }
 }
 
